--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ body{
 
 body::after {
     content: "";
-    background-image: url("http://www.publicdomainpictures.net/pictures/150000/velka/wall-pattern.jpg");
+    background-image: url("assets/img/body-bg.jpg");
     background-position: center center;
     background-repeat: no-repeat;
 
