--- a/src/app/common/components/profile/profile.component.css
+++ b/src/app/common/components/profile/profile.component.css
@@ -1,96 +1,201 @@
-img:hover{
-    filter: grayscale();
-}
-.text {
-    /* background-color: #4CAF50; */
-    color: black;
-    font-size: 20px;
-    padding: 16px 32px;
+
+  .shapes-wrapper {
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
   }
-.middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 110%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-.circle {
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-    border: 2px solid black;
-    position: absolute;
-    top: 30%;
-    left: 40%;
-}
-.circle:hover{
-    box-shadow: 0 10px 10px grey;
-    transition: ease-in-out 2s;
-    width: 160px;
-    height: 160px;
-    margin: 0 auto;
-}
-.circle img {
-    border-radius: 50%;
+ 
+  .shapes-wrapper:hover .circle {
     width: 100%;
-    height: auto;
+    border-left-color: red;
+    border-top-color: black;
+  }
+  
+  .shapes-wrapper:hover .circle-left-half {
+    transition: .5s transform linear;
+    transform: rotate(135deg);
+  }
+  
+  .shapes-wrapper:hover .circle-right-half {
+    transition: 1s transform linear;
+    transform: rotate(315deg);
+  }
+  
+  .shapes-wrapper:hover .box-left-half {
+    animation-name: box-removed;
+    animation-delay: .5s;
+    animation-fill-mode: forwards;
+  }
+  
+  .circle-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: -50%;
+    left: -50%;
+  }
+  
+  .circle-wrapper .circle {
+    width: 0;
+    height: 100%;
+    position: absolute;
+    background: transparent;
+    /* border-width: 100px; */
+    border-style: solid;
+    border-radius: 100%;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border-color: transparent;
+    transform: rotate(-45deg);
+  }
+  
+  .circle-wrapper .circle-left-half {
+    z-index: 2;
+  }
+  
+  .circle-wrapper .circle-right-half {
+    z-index: 1;
   }
 
-.circle:hover .middle {
+  .circle-wrapper .box-left-half {
+    position: relative;
+    width: 100%;
+    height: 200%;
+    left: 0;
+    /* background: #2c3e50; */
+    z-index: 3;
     opacity: 1;
   }
-
-
-img {
-    width: 100px;
-    height: auto;
+  
+  .shape-inner {
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-image: url("http://bootdey.com/img/Content/avatar/avatar3.png");
+    background-size: cover;
+    z-index: 999;
   }
 
-.image-center {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-    filter: drop-shadow(1px 1px 0px blue)
-            drop-shadow(1px -1px 0px blue)
-            drop-shadow(-1px 1px 0px blue)
-            drop-shadow(-1px -1px 0px blue);
+  .shape-inner:hover{
+    filter: grayscale();
+    opacity: 0.75;  
+  }    
+  
+  @keyframes box-removed {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 1;
+    }
+    50.001% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
+  .star {
+    -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  }
+  
+  .triangle {
+    -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
   }
 
-  .image-center:hover{
-    transition: ease-in-out 2s;
-    width: 160px;
-    height: 160px;
-    margin: 0 auto;
-}
-
-  .polygon-clip-hexagon1 {
-    width: 100px;
-    height: 100px;
-    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  }
-  .polygon-clip-trapezoid1 {
-    width: 100px;
-    height: 100px;
-    clip-path:  polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-  }
-
-  .polygon-clip-square1 {
-    width: 100px;
-    height: 100px;
+  .square {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
-
-  .polygon-clip-circle1 {
-    width: 100px;
-    height: 100px;
-    clip-path: circle(50.0% at 50% 50%);
+  
+  .pentagon {
+    -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
   }
-
-  .polygon-clip-rabbet1 {
-    width: 100px;
-    height: 100px;
+  
+  .hexagon {
+    -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  }
+  
+  .heptagon {
+    -webkit-clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
+    clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
+  }
+  
+  .bevel {
+    -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+  }
+  
+  .rabbet {
+    -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
   }
+  
+  .point {
+    -webkit-clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
+    clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
+  }
+  
+  .chevron {
+    -webkit-clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+    clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+  }
+  
+  .trapezoid {
+    -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+  }
+  
+  .parallelogram {
+    -webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  }
+  
+  .rhombus {
+    -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  }
+  
+  .oval {
+    -webkit-clip-path: ellipse(25% 40% at 50% 50%);
+    clip-path: ellipse(25% 40% at 50% 50%);
+  }
+  
+  .circle-360 {
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+  }
+  
+  .kite {
+    -webkit-clip-path: polygon(50% 0, 90% 30%, 50% 100%, 10% 30%);
+    clip-path: polygon(50% 0, 90% 30%, 50% 100%, 10% 30%);
+  }
 
+ .thumbnail {
+	display: block;
+    height: auto;
+}
+
+.thumbnail:hover + #title {
+	display: block;
+}
+
+#title {
+	display: none;
+    color: black;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+}
