--- a/src/app/common/components/profile/profile.component.css
+++ b/src/app/common/components/profile/profile.component.css
@@ -3,71 +3,9 @@
     overflow: hidden;
     position: relative;
     display: inline-block;
+    animation: pulse 2s ease infinite;
   }
  
-  .shapes-wrapper:hover .circle {
-    width: 100%;
-    border-left-color: red;
-    border-top-color: black;
-  }
-  
-  .shapes-wrapper:hover .circle-left-half {
-    transition: .5s transform linear;
-    transform: rotate(135deg);
-  }
-  
-  .shapes-wrapper:hover .circle-right-half {
-    transition: 1s transform linear;
-    transform: rotate(315deg);
-  }
-  
-  .shapes-wrapper:hover .box-left-half {
-    animation-name: box-removed;
-    animation-delay: .5s;
-    animation-fill-mode: forwards;
-  }
-  
-  .circle-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: -50%;
-    left: -50%;
-  }
-  
-  .circle-wrapper .circle {
-    width: 0;
-    height: 100%;
-    position: absolute;
-    background: transparent;
-    /* border-width: 100px; */
-    border-style: solid;
-    border-radius: 100%;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    border-color: transparent;
-    transform: rotate(-45deg);
-  }
-  
-  .circle-wrapper .circle-left-half {
-    z-index: 2;
-  }
-  
-  .circle-wrapper .circle-right-half {
-    z-index: 1;
-  }
-
-  .circle-wrapper .box-left-half {
-    position: relative;
-    width: 100%;
-    height: 200%;
-    left: 0;
-    /* background: #2c3e50; */
-    z-index: 3;
-    opacity: 1;
-  }
-  
   .shape-inner {
     width: calc(100% - 10px);
     height: calc(100% - 10px);
@@ -77,9 +15,9 @@
     right: 0;
     bottom: 0;
     margin: auto;
-    background-image: url("http://bootdey.com/img/Content/avatar/avatar3.png");
     background-size: cover;
     z-index: 999;
+    /* animation: pulse 2s ease infinite; */
   }
 
   .shape-inner:hover{
@@ -198,4 +136,65 @@
     font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
+}
+
+.container {
+  width: 200px;
+  height: 100%;
+  margin: 0 auto 0;
+}
+
+.pulse-button {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border: none;
+  box-shadow: 0 0 0 0 grey;
+  border-radius: 5%;
+  background-size:cover;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  animation: pulse 2s infinite cubic-bezier(0.66, 0, 0, 1);
+}
+/* .pulse-button:hover 
+{
+  -webkit-animation: none;-moz-animation: none;-ms-animation: none;animation: none;
+} */
+
+@keyframes pulse {to {box-shadow: 0 0 0 35px rgba(232, 76, 61, 0);}}
+
+
+.cdc, .cdc2 {
+  top: 45%;
+  position:absolute;
+	width: 38px;
+	height: 40px;
+	background: #87B740;
+	-webkit-clip-path: polygon(0% 30%, 50% 0%, 100% 30%, 100% 100%, 0% 100%);
+clip-path: polygon(0% 30%, 50% 0%, 100% 30%, 100% 100%, 0% 100%);
+}
+.cdc {
+  z-index: 10;
+}
+.cdc2 {
+  z-index: 5;
+  animation: pulse 2s ease infinite;
+}
+
+
+@keyframes pulse {
+  0% {
+    opacity:1;
+  }
+  51%{
+    transform: scale(1.0);
+    opacity:1;
+  }
+  60%{
+    transform: scale(1.6);
+    opacity:0;
+  }
+  100%{
+    opacity:0;
+  }
 }
