--- a/src/app/games/bluff/bluff.component.html
+++ b/src/app/games/bluff/bluff.component.html
@@ -1,3 +1,2 @@
-<p>
-  bluff works!
-</p>
+<db-app-card [rank]="'A'" [suit]="'spades'"></db-app-card>
+<db-app-card [rank]="'K'" [suit]="'hearts'"></db-app-card>
