--- a/src/app/common/components/profile/profile.component.html
+++ b/src/app/common/components/profile/profile.component.html
@@ -1,5 +1,6 @@
-    <div class="shapes-wrapper {{ profileObj.avatarShape }} thumbnail" [style.background]="borderColor" [style.width]="getSize(size)" [style.height]="getSize(size)">
-        <div class="shape-inner {{ profileObj.avatarShape }}" [ngStyle]="{ 'background-image': 'url(' + profileObj.path + ')'}"></div>
-    </div>
-    <!-- This is to display Profile Name on mouse hover -->
-    <div id="title" [style.width]="getSize(size)">{{ profileObj.name }}</div>
+
+<div class="dbShapes-wrapper {{ profileObj.avatarShape }} dbThumbnail" [style.background]="borderColor" [style.width]="getSize(size)" [style.height]="getSize(size)">
+    <div class="dbShape-inner {{ profileObj.avatarShape }}" [ngStyle]="{ 'background-image': 'url(' + profileObj.path + ')'}"></div>
+</div>
+<!-- This is to display Profile Name on mouse hover -->
+<div id="dbTitle" [style.width]="getSize(size)">{{ profileObj.name }}</div>
