taken care of review comments.

--- a/src/app/common/components/table/table.component.html
+++ b/src/app/common/components/table/table.component.html
@@ -1,2 +1,2 @@
-<div class="game-table" [style.background]="tableColor" [style.border]="tableBorder"></div>
+<div class="db-game-table" [style.background]="tableColor"></div>
     
