--- a/src/app/common/components/home/home.component.html
+++ b/src/app/common/components/home/home.component.html
@@ -1,2 +1,6 @@
-<h1>Wellcome to {{ title }}</h1>
-<a routerLink="/games/bluff">Bluff Game</a>
+<div>
+    <h1>Wellcome to {{ title }}</h1>
+    <div>   
+        <db-app-game-icon class="display" [gameName]="'Bluff Game'" [link]="'/games/bluff'" [gameImage]="'assets/gameIcons/bluff.JPG'"></db-app-game-icon>
+    </div>
+</div>
