--- a/src/app/common/components/profile/profile.component.html
+++ b/src/app/common/components/profile/profile.component.html
@@ -1,6 +1,6 @@
-<div class="dbShapes-wrapper {{ profileObj.avatarShape }} dbThumbnail" [style.background]="borderColor" [style.width]="getSize(size)" [style.height]="getSize(size)">
-    <db-app-timer-spinner *ngIf="isActive" [timeout]="'10'"></db-app-timer-spinner>
-    <div class="dbShape-inner {{ profileObj.avatarShape }}" [ngStyle]="{ 'background-image': 'url(' + profileObj.path + ')'}"></div>
+<div class="dbShapes-wrapper {{ profileObj.avatarShape }} dbThumbnail" [ngClass]="{'animated':isActive, 'pulse':isActive}" [style.background]="borderColor" [style.width]="getSize(size)" [style.height]="getSize(size)">
+    <db-app-timer-spinner *ngIf="isActive" [timeout]="timeout"></db-app-timer-spinner>
+    <div class="animated pulse" class="dbShape-inner {{ profileObj.avatarShape }}" [ngStyle]="{ 'background-image': 'url(' + profileObj.path + ')'}"></div>
 </div>
 <!-- This is to display Profile Name on mouse hover -->
 <div id="dbTitle" [style.width]="getSize(size)">{{ profileObj.name }}</div>
