--- a/src/app/common/components/profile/profile.component.html
+++ b/src/app/common/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="dbShapes-wrapper {{ profileObj.avatarShape }} dbThumbnail" [ngClass]="{'animated':isActive, 'pulse':isActive}" [style.background]="borderColor" [style.width]="getSize(size)" [style.height]="getSize(size)">
-    <db-app-timer-spinner *ngIf="isActive" [timeout]="timeout"></db-app-timer-spinner>
+    <db-app-timer-spinner *ngIf="isActive" [timeout]="timeout" (timeUp)="changeStatus()"></db-app-timer-spinner>
     <div class="animated pulse" class="dbShape-inner {{ profileObj.avatarShape }}" [ngStyle]="{ 'background-image': 'url(' + profileObj.path + ')'}"></div>
 </div>
 <!-- This is to display Profile Name on mouse hover -->
