Addressed review comment

--- a/src/app/common/components/timer-spinner/timer-spinner.component.html
+++ b/src/app/common/components/timer-spinner/timer-spinner.component.html
@@ -1,5 +1,5 @@
 <mat-progress-spinner
-  [color]="color"
-  [mode]="mode"
-  [value]="value">
+  [color]="timerObj.color"
+  [mode]="timerObj.mode"
+  [value]="timerObj.value">
 </mat-progress-spinner>
