--- a/src/app/common/components/forms/signup/signup.component.html
+++ b/src/app/common/components/forms/signup/signup.component.html
@@ -18,18 +18,35 @@
       </div>
       <div>
         <mat-form-field>
-          <input matInput formControlName="emailID" placeholder="Email address" required type="text">
-          <mat-error *ngIf="emailID.touched && emailID.errors && emailID.errors.spacialChars && emailID.value !== ''">Email ID must contain '@'</mat-error>
+          <input matInput formControlName="email" placeholder="Email address" required type="text">
+          <mat-error *ngIf="email.value !== ''">
+            <span *ngIf="email.hasError('email', 'email') && email.get('email').touched">
+              Please enter the correct email, this email not valid.
+            </span>
+          </mat-error>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field>
           <input matInput formControlName="password" placeholder="Password" required type="text">
+          <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+            <span *ngIf="password.errors.maxlength">
+              Please enter a password no more than 16 characters.
+            </span>
+            <span *ngIf="password.errors.minlength">
+              Please enter a password at least 6 characters.
+            </span>
+          </mat-error>
         </mat-form-field>
       </div>
       <div>
         <mat-form-field>
           <input matInput formControlName="confirmPassword" placeholder="Confirm Password" required type="text">
+          <mat-error *ngIf="(confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched) || form.errors?.mismatch)">
+            <span *ngIf="confirmPassword.errors || form.errors?.mismatch">
+              Password doesn't match
+            </span>
+          </mat-error>
         </mat-form-field>
       </div>
       <button mat-raised-button color="primary" (click)="submitValue()">Submit</button> 
