added email field

--- a/src/app/common/components/forms/password-recovery-form/password-recovery-form.component.html
+++ b/src/app/common/components/forms/password-recovery-form/password-recovery-form.component.html
@@ -1,13 +1,12 @@
+
 <form [formGroup]="form">
+  <div>Email ID: {{email}}</div>
   <mat-form-field>
     <input matInput formControlName="password" placeholder="Enter new password" type="password"  [maxlength] = "maxLength" [minlength]="minLength" required>
   </mat-form-field>
   <br>
   <mat-form-field>
     <input matInput formControlName="confirmPassword" placeholder="Confirm password" type="password" [maxlength] = "maxLength" [minlength]="minLength"  required>
-    <!-- <mat-error *ngIf="formGroup.get('confirmPassword').hasError('confirmPassword')">
-        Passwords do not match
-    </mat-error> -->
   </mat-form-field>
   <br>
   <button mat-raised-button color="primary" (click)="submitValue()">Submit</button> 
