--- a/src/app/common/components/forms/password-recovery-form/password-recovery-form.component.html
+++ b/src/app/common/components/forms/password-recovery-form/password-recovery-form.component.html
@@ -1,13 +1,25 @@
-
+<div>Email ID: {{email}}</div>
 <form [formGroup]="form">
-  <div>Email ID: {{email}}</div>
-  <mat-form-field>
-    <input matInput formControlName="password" placeholder="Enter new password" type="password"  [maxlength] = "maxLength" [minlength]="minLength" required>
-  </mat-form-field>
+    <mat-form-field>
+        <input matInput formControlName="password" placeholder="Password" required type="text">
+        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+          <span *ngIf="password.errors.maxlength">
+            Please enter a password no more than 16 characters.
+          </span>
+          <span *ngIf="password.errors.minlength">
+            Please enter a password at least 6 characters.
+          </span>
+        </mat-error>
+      </mat-form-field>
   <br>
-  <mat-form-field>
-    <input matInput formControlName="confirmPassword" placeholder="Confirm password" type="password" [maxlength] = "maxLength" [minlength]="minLength"  required>
-  </mat-form-field>
+    <mat-form-field>
+      <input matInput formControlName="confirmPassword" placeholder="Confirm Password" required type="text">
+      <mat-error *ngIf="(confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched) || form.errors?.mismatch)">
+        <span *ngIf="confirmPassword.errors || form.errors?.mismatch">
+          Password doesn't match
+        </span>
+      </mat-error>
+    </mat-form-field>
   <br>
   <button mat-raised-button color="primary" (click)="submitValue()">Submit</button> 
 </form>
