--- a/src/app/common/components/navbar/navbar.component.html
+++ b/src/app/common/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar class="mat-elevation-z6" color="primary">
+<mat-toolbar class="mat-elevation-z6" color="{{ color }}">
     
-  <p id="icon"> DB </p> 
+  <p> <img id="logo" src="assets\img\logo.jpg" alt="GameLogo" /> </p> 
   
-  <span class="example-spacer"></span>
-  <label class="hello">Hello, <b>Rakshitha</b></label>
+  <span class="spacer"></span>
+  <label class="hello">Hello, <b> {{ playerName }} </b></label>
   <button mat-button mat-icon-button [mat-menu-trigger-for]="menu">
       <mat-icon mat-icon-button >
           account_circle
@@ -19,10 +19,9 @@
 
 <mat-menu x-position="before" #menu="matMenu">
   <button mat-menu-item (click)="openProfile()">My Profile</button>
-  <button mat-menu-item>Logout</button>
+  <button mat-menu-item (click)="logout()">Logout</button>
 </mat-menu>
 
 <mat-menu x-position="before" #notification="matMenu">
-  <button mat-menu-item>Notification 1</button>
-  <button mat-menu-item>Notification 2</button>
+  <button *ngFor="let notifcationMessage of notifications" mat-menu-item> {{ notifcationMessage }} </button>
 </mat-menu>    
