--- a/src/app/common/components/forms/password-recovery-form/password-recovery-form.component.html
+++ b/src/app/common/components/forms/password-recovery-form/password-recovery-form.component.html
@@ -1,19 +1,19 @@
-<div>Email ID: {{email}}</div>
+<div>Email ID: {{ email }}</div>
 <form [formGroup]="form">
     <mat-form-field>
-        <input matInput formControlName="password" placeholder="Password" required type="text">
+        <input matInput formControlName="password" placeholder="Password" required type="password">
         <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
           <span *ngIf="password.errors.maxlength">
-            Please enter a password no more than 16 characters.
+            Please enter a password no more than  {{ pwdMinLength }} characters.
           </span>
           <span *ngIf="password.errors.minlength">
-            Please enter a password at least 6 characters.
+            Please enter a password at least  {{ pwdMaxLength }} characters.
           </span>
         </mat-error>
       </mat-form-field>
   <br>
     <mat-form-field>
-      <input matInput formControlName="confirmPassword" placeholder="Confirm Password" required type="text">
+      <input matInput formControlName="confirmPassword" placeholder="Confirm Password" required type="password">
       <mat-error *ngIf="(confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched) || form.errors?.mismatch)">
         <span *ngIf="confirmPassword.errors || form.errors?.mismatch">
           Password doesn't match
