correction to error message

--- a/src/app/common/components/forms/password-recovery-form/password-recovery-form.component.html
+++ b/src/app/common/components/forms/password-recovery-form/password-recovery-form.component.html
@@ -4,10 +4,10 @@
         <input matInput formControlName="password" placeholder="Password" required type="password">
         <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
           <span *ngIf="password.errors.maxlength">
-            Please enter a password no more than  {{ pwdMinLength }} characters.
+            Please enter a password no more than  {{ pwdMaxLength }} characters.
           </span>
           <span *ngIf="password.errors.minlength">
-            Please enter a password at least  {{ pwdMaxLength }} characters.
+            Please enter a password at least  {{ pwdMinLength }} characters.
           </span>
         </mat-error>
       </mat-form-field>
